# SeedShield

./: .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  .releaserc  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  build.sh  codecov.yml  context  input.txt  pyproject.toml  setup.py  update_version.py
.github/: CODEOWNERS  dependabot.yml  settings.yml
.github/workflows/: ci.yml
seedshield/: __init__.py  config.py  display_handler.py  input_handler.py  main.py  secure_memory.py  secure_word_interface.py  state_handler.py  ui_manager.py
tests/: __init__.py  conftest.py  test_config.py  test_display_handler.py  test_fixtures.py  test_input_handler.py  test_main.py  test_secure_memory.py  test_secure_word_interface.py  test_state_handler.py  test_ui_manager.py
