[build-system]
requires = ["setuptools>=64.0", "wheel", "pytest", "pyperclip>=1.8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SeedShield"
version = "0.2.3"
readme = { file = "README.md", content-type = "text/markdown" }
description = "Secure BIP39 word viewer with masking and reveal functionality"
license = {text = "MIT"}
authors = [
    {name = "Barlog951", email = "barlog951@gmail.com"}
]
requires-python = ">=3.8"
dependencies = [
    "pyperclip>=1.8.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

[project.urls]
"Documentation" = "https://github.com/Barlog951/SeedShield/blob/main/README.md"
"Source Code" = "https://github.com/Barlog951/SeedShield"
"Bug Tracker" = "https://github.com/Barlog951/SeedShield/issues"

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pytest-timeout>=2.1.0",
    "pytest-cov",
    "pylint",
    "flake8",
    "mypy"
]
windows = ["windows-curses"]
dev = [
    "build",
    "twine"
]

[project.scripts]
seedshield = "seedshield.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "timeout: mark test with timeout value in seconds"
]

[tool.pylint.messages_control]
disable = [
    "R0913",  # too-many-arguments
    "R0917",  # too-many-positional-arguments
    "R0914",  # too-many-locals
    "R0902",  # too-many-instance-attributes
    "R0903",  # too-few-public-methods
    "R0911",  # too-many-return-statements
    "W0212",  # protected-access
    "C0415",  # import-outside-toplevel
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "W0613",  # unused-argument (often used in tests with fixtures)
    "E1101",  # no-member (often triggered by mocks)
    "C0411",  # wrong-import-order
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
