[build-system]
requires = ["setuptools>=64.0", "wheel", "pytest", "pyperclip>=1.8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SeedShield"
dynamic = ["version"]
readme = { file = "README.md", content-type = "text/markdown" }
description = "Secure BIP39 word viewer with masking and reveal functionality"
license = {text = "MIT"}
authors = [
    {name = "Barlog951", email = "barlog951@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "pyperclip>=1.8.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
]

[project.urls]
"Documentation" = "https://github.com/Barlog951/SeedShield/blob/main/README.md"
"Source Code" = "https://github.com/Barlog951/SeedShield"
"Bug Tracker" = "https://github.com/Barlog951/SeedShield/issues"

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pytest-timeout>=2.1.0",
    "pytest-cov",
    "pylint",
    "flake8",
    "mypy"
]
windows = ["windows-curses"]
dev = [
    "build",
    "twine",
    "black"
]

[project.scripts]
seedshield = "seedshield.main:main"

[tool.setuptools.dynamic]
# Single source of truth for the version; semantic-release updates config.py
version = {attr = "seedshield.config.VERSION"}

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "timeout: mark test with timeout value in seconds"
]

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
]

[tool.mypy]
# Type-check against the supported floor
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
